# hexis-public

./: .gitignore  README.md
code/: M_canonical_recipe.md  pyproject.toml  training_curriculum.md
code/hexis/: __init__.py  belief_compiler.py  belief_tree_memory.py  compiled_belief_training.py  config.py  conviction_reader.py  direction_injector.py  phi_node_writer.py  train.py
code/hexis/adapters/: __init__.py  cli.py  model_preset.py  presets.py  prompt_formats.py  thinking_modes.py  tool_formats.py  vllm.py
code/hexis/adapters/tests/: test_adapter.py
code/qkvm/: __init__.py  argument_curator.py  belief_compiler.py  belief_rankers.py  belief_tree_memory.py  compiled_belief_training.py  conviction_reader.py  data_200_topics.py  mstate_read_head.py  phi_node_writer.py  universal_schema.py
code/scripts/: extract_d_star.py  extract_d_star_prompted.py  extract_d_star_repeat.py  extract_d_star_repeat_v2.py  extract_d_star_tools_teacher_forced.py  extract_d_star_tools_v2.py  extract_d_star_tools_v2_varied.py  generate_sycophancy_golds.py  train_v21.py  train_v21_1.py  train_v21_2.py  train_v21_4.py  train_v23_strategy.py  train_v23_sycophancy.py  v23_compiled_m.py  v23_paper_eval.py  v23_ranker_comparison.py  v23_sycophancy_5level.py
paper/: GAP_ANALYSIS.md  PAPER_PLAN.md  hexis.md  neurips_2026_guidelines.md  references.bib
paper/figures/: adaptation-design-space.jsx  fig-arch-comparison.jsx  fig-layer-modulation.jsx  fig-system-overview.jsx  fig-three-layer.jsx
results/: README.md  USER_SIM_MODEL_LEDGER.md  benchmark_plan_v2.md  v23_sycophancy_5level.json
(+37 files in other folders)
