[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexis"
version = "0.1.0"
description = "HEXIS: Compiled Dispositional Memory Through Enmeshed Networks (NeurIPS 2026)"
readme = "../README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Devin Gonier"},
]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.19.0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
serve = [
    "vllm>=0.15.0",
]

[project.scripts]
hexis-train = "hexis.train:main"

[tool.setuptools.packages.find]
include = ["hexis*"]

[tool.pytest.ini_options]
testpaths = ["hexis/adapters/tests"]
